@@ -130,7 +130,7 @@ writeconfig() {
     }
 
     # Application walled garden entries:
-    [ "$HS_USE_MAP" = "on" ] && addconfig1 "uamallowed www.google.com,maps.google.com,mt.google.com,kh.google.com,labs.google.com"
+    [ "$HS_USE_MAP" = "on" ] && addconfig1 "uamdomain .google.com"
 
     (cat <<EOF
 # THIS FILE IS AUTOMATICALLY GENERATED
@@ -158,6 +158,7 @@ EOF
 	[ -n "$HS_UAMSECRET" ] && addconfig2 "uamsecret $HS_UAMSECRET"
 	test ${HS_DEFSESSIONTIMEOUT:-0} -gt 0 && addconfig2 "defsessiontimeout $HS_DEFSESSIONTIMEOUT"
 	test ${HS_DEFIDLETIMEOUT:-0} -gt 0 && addconfig2 "defidletimeout $HS_DEFIDLETIMEOUT"
+	test ${HS_DEFINTERIMINTERVAL:-0} -gt 0 && addconfig2 "definteriminterval $HS_DEFINTERIMINTERVAL"
 	[ -n "$HS_POSTAUTH_PROXY" -a -n "$HS_POSTAUTH_PROXYPORT" ] && {
 	    addconfig2 "postauthproxy $HS_POSTAUTH_PROXY"
 	    addconfig2 "postauthproxyport $HS_POSTAUTH_PROXYPORT"
